fixed overlapping sections in desktop hd

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -596,6 +596,13 @@ ul li {
     grid-template-rows: 1050px 500px;
   }
 }
+@media (min-width: 1200px) {
+  .content .spotlight .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1700px 500px;
+  }
+}
 .content .spotlight .gallery .video {
   grid-column: span 2;
 }
@@ -658,6 +665,11 @@ ul li {
 }
 .content .contact {
   text-align: center;
+}
+@media (min-width: 1200px) {
+  .content .contact {
+    margin-top: 250px;
+  }
 }
 @media (min-width: 768px) {
   .content .contact .name {
@@ -976,7 +988,7 @@ p {
 @media (min-width: 1200px) {
   .spotlight .video {
     width: 100%;
-    height: 1900px;
+    height: 1700px;
   }
 }
 .spotlight .gallery1 {
@@ -992,8 +1004,8 @@ p {
 }
 @media (min-width: 1200px) {
   .spotlight .gallery1 {
-    width: 565px;
-    height: 450px;
+    width: 700px;
+    height: 500px;
   }
 }
 .spotlight .gallery2 {
@@ -1015,8 +1027,8 @@ p {
 }
 @media (min-width: 1200px) {
   .spotlight .gallery2 {
-    width: 420px;
-    height: 450px;
+    width: 450px;
+    height: 500px;
   }
 }
 .spotlight .gallery3 {
@@ -1038,8 +1050,8 @@ p {
 }
 @media (min-width: 1200px) {
   .spotlight .gallery3 {
-    width: 455px;
-    height: 450px;
+    width: 550px;
+    height: 500px;
   }
 }
 .spotlight .pressimg {
