--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -279,6 +279,12 @@ ul {
 				grid-template-rows: 1050px 500px;
 			}
 
+			@include xl {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-template-rows: 1700px 500px;
+			}
+
 			.video {
 				grid-column: span 2;
 
@@ -351,6 +357,10 @@ ul {
 
 	.contact {
 		text-align: center;
+
+		@include xl {
+			margin-top: 250px;
+		}
 
 		.name {
 			@include md {
