--- a/dev/scss/layout/_spotlight.scss
+++ b/dev/scss/layout/_spotlight.scss
@@ -11,7 +11,7 @@
 
         @include xl {
             width: 100%;
-            height: 1900px;
+            height: 1700px;
         }
     }
 
@@ -26,8 +26,8 @@
         }
 
         @include xl {
-            width: 565px;
-            height: 450px;
+            width: 700px;
+            height: 500px;
         }
     }
 
@@ -47,8 +47,8 @@
         }
 
         @include xl {
-            width: 420px;
-            height: 450px;
+            width: 450px;
+            height: 500px;
         }
     }
 
@@ -68,8 +68,8 @@
         }
 
         @include xl {
-            width: 455px;
-            height: 450px;
+            width: 550px;
+            height: 500px;
         }
     }
 
